docstream/styles/main.css
.editsContainer {
    position: fixed;
    top: 50%;
    left: 50%;
    height: 70vh;
    width: 75vw;
    background-color: #F1F5F9;
    transform: translate(-50%, -50%);
    z-index: 100000;
    border: 2px solid rgba(0, 0, 0, 0.275);
    border-radius: 10px;
    overflow: auto;
    /* color: white; */
}

.editsContainer-dark{
    background-color: #1b1a1a;
    color: rgb(222, 222, 222);
}

.editsHeader{
    position: relative;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    background-color: inherit;
    align-items: center;
    padding: 20px 60px;
    opacity: 1;
    z-index: 2;
    /* box-shadow: 0px 2px 15px rgba(62, 84, 88, 0.075); */
}

.editsContainer-dark .editsHeader{
    /* box-shadow: 0px 2px 15px rgba(14, 14, 14, 0.518); */
}

.editsHeader > h1{
    font-size: 1.8rem;
    color:#4caf50;
}


.editsHeader>button {
    stroke: black;
    padding: 10px;
    display: grid;
    grid-template-columns: 100%;
    align-items: center;
    justify-items: center;
    transition: all 0.2s ease;
    cursor: pointer;
}

.editsHeader>button:hover{
    stroke:#4caf50;
}

.indiEditContainer {
    position: relative;
    padding: 30px 60px;
    /* border: 2px solid black; */
    /* background-color: rgb(35, 35, 35); */
}

.indiEditContainer>h2 {
    margin-bottom: 20px;
    font-size: 1.4rem;
}

.indiEditContainer .quill {
    border: none;
}

.indiEdit {
    position: relative;
    display: grid;
    grid-template-columns: 45% 5% 45%;
    align-items: center;
}

.indiEdit > .ql-container{
    margin: 0 20px;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 8px 8px 16px #C9D9E8, -8px -8px 16px #FFFFFF;
}

.editsContainer-dark .indiEdit > .ql-container{
    box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.5), -4px -4px 16px rgba(255, 255, 255, 0.05);
}


.indiEdit>p {
    justify-self: center;
}

.editsContainer>div>div {
    position: relative;
}


.mainContainer {
    position: relative;
    display: grid;
    min-height: 100vh;
    width: 100%;
    grid-template-rows: 7% 4% auto;
    max-width: 100vw;
}

.toolbarContainer {
    position: relative;
    border: 1px solid #ccc;
    background-color: #F1F5F9;
    display: grid;
    grid-template-rows: 100%;
    align-items: center;
    justify-items: center;
}

.toolbarContainer-dark {
    position: relative;
    border: 1px solid #444;
    background-color: #1b1a1a;
    display: grid;
    grid-template-rows: 100%;
    align-items: center;
    justify-items: center;
}

#toolbar {
    color: #4caf50;
    width: 100%;
    position: relative;
    display: grid;
    grid-template-columns: repeat(19, auto);
    justify-items: center;
    align-items: center;
    height: 100%;
    width: max-content;
    margin: 0 auto;
    border: none;
}

#toolbar-dark {
    color: #4caf50;
    background-color: 1b1a1a;
    width: 100%;
    position: relative;
    display: grid;
    grid-template-columns: repeat(19, auto);
    justify-items: center;
    align-items: center;
    height: 100%;
    width: max-content;
    margin: 0 auto;
    border: none;
}

.header {
    background-color: #F1F5F9;
    color: black;
    width: 100%;
    height: inherit;
    display: grid;
    grid-template-columns: 30% 70%;
    align-items: center;
    justify-items: left;
    padding: 10px 50px;
}

.header>div:nth-of-type(1) {
    display: grid;
    grid-template-columns: repeat(2, auto);
    justify-items: center;
    align-items: center;
    column-gap: 10px;
    margin-right: 50px;
}

.header>div:nth-of-type(2) {
    display: grid;
    grid-template-columns: repeat(5, auto);
    justify-self: right;
    column-gap: 50px;
}

.header-dark {
    background-color: #1b1a1a;
    color: white;
    width: 100%;
    height: inherit;
    display: grid;
    grid-template-columns: 30% 70%;
    align-items: center;
    justify-items: left;
    padding: 10px 50px;
}

.editorContainer {
    padding: 110px 0;
    background: url('../pages/BGGREYGREEN.svg') center center;
    background-color: #FFFFFF;

}

.editorContainer-dark {
    padding: 110px 0;
    background: url('../pages/BGGREYGREENDARK.svg') center center;
    background-color: #191919;

}

.toolbarBtn {
    position: relative;
    border-radius: 100%;
    background-color: #F1F5F9;
    box-shadow: 8px 8px 16px #C9D9E8, -8px -8px 16px #FFFFFF;
    cursor: pointer;
    animation-duration: 0.05s;
    outline: none;
    border: none;
    display: grid !important;
    grid-template-columns: 100% !important;
    align-items: center !important;
    justify-items: center !important;
    padding: 0px !important;
    float: none !important;
    height: 30px !important;
    width: 30px !important;
}

.toolbarBtn-dark {
    /* box-shadow: 8px 8px 16px #141515, -8px -8px 16px #202020; */
    box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.5), -4px -4px 16px rgba(255, 255, 255, 0.05);

}


.dropDown-dark {
    background-color: #1b1a1a;
    color: red;
}

button:focus {
    outline: none;
}

#toolbar>button,
#toolbar>span {
    margin: 0px 8px !important;
}

.toolbarBtn>svg {
    float: none !important;
    /* height: 70% !important; */
    /* width: 70%!important; */
}

.toolbarBtn:hover {
    animation-name: shadow;
    animation-timing-function: ease;
    box-shadow: inset 4px 4px 8px #c9d9e88b, inset -4px -4px 8px #ffffff;
}

.toolbarBtn-dark:hover {
    animation-name: dark-shadow;
    animation-timing-function: ease;
    /* box-shadow: inset 4px 4px 8px #141515, inset -4px -4px 8px #202020; */
    box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.75) inset, -4px -4px 16px rgba(255, 255, 255, 0.1) inset;

}

.button {
    position: relative;
    padding: 10px 40px;
    border-radius: 20px;
    background-color: #F1F5F9;
    box-shadow: 8px 8px 16px #C9D9E8, -8px -8px 16px #FFFFFF;
    cursor: pointer;
    animation-duration: 0.05s;
    outline: none;
    border: none;
    color: #4caf50;
}
/* ... */

